--- a/index.html
+++ b/index.html
@@ -125,6 +125,22 @@
                 <div class="flex-team">
                 <h3 class="person">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
+             <ul class="social-list list">
+             <li class="social-list-item">
+                 <a href="" class="social-list-link">
+                 <svg class="social-list-icon" width="20" height="20">
+                 <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+                </a>
+            </li>
+            <li class="social-list-item">
+                <a href="" class="social-list-link">
+                <svg class="social-list-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+               </svg>
+               </a>
+           </li>
+             </ul>
             </div>
             </li>
             <li class="team-item">
