add icon for team

--- a/index.html
+++ b/index.html
@@ -125,12 +125,10 @@
                 <div class="flex-team">
                 <h3 class="person">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
-
-
              <ul class="social-list list">
              <li class="social-list-item">
                  <a href="" class="social-list-link">
-                 <svg class="social-list-icon">
+                 <svg class="social-list-icon" width="16" height="16">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                  </svg>
                 </a>
@@ -138,30 +136,24 @@
             <li class="social-list-item">
                 <a href="" class="social-list-link">
                 <svg class="social-list-icon">
-                    <use></use>
+                    <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
                </a>
            </li>
            <li class="social-list-item">
             <a href="" class="social-list-link">
            <svg class="social-list-icon">
-            <use></use>
+            <use href="./images/sprite.svg#icon-facebook"></use>
            </svg>
            </a>
        </li>
        <li class="social-list-item">
         <a href="" class="social-list-link">
         <svg class="social-list-icon">
-            <use></use>
+            <use href="./images/sprite.svg#icon-linkedin"></use>
         </svg>
        </a>
    </li>
-
-
-
-
-
-
              </ul>
             </div>
             </li>
@@ -172,8 +164,39 @@
                 <div class="flex-team">
                 <h3 class="person">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
+                <ul class="social-list list">
+             <li class="social-list-item">
+                 <a href="" class="social-list-link">
+                 <svg class="social-list-icon" width="16" height="16">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                 </svg>
+                </a>
+            </li>
+            <li class="social-list-item">
+                <a href="" class="social-list-link">
+                <svg class="social-list-icon">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+               </a>
+           </li>
+           <li class="social-list-item">
+            <a href="" class="social-list-link">
+           <svg class="social-list-icon">
+            <use href="./images/sprite.svg#icon-facebook"></use>
+           </svg>
+           </a>
+       </li>
+       <li class="social-list-item">
+        <a href="" class="social-list-link">
+        <svg class="social-list-icon">
+            <use href="./images/sprite.svg#icon-linkedin"></use>
+        </svg>
+       </a>
+   </li>
+             </ul>
             </div>
             </li>
+
             <li class="team-item">
                 <img src="./images/team/camila_garcia.jpg" alt="foto by Camila Garcia"
                 width="264"
@@ -181,8 +204,38 @@
                 <div class="flex-team">
                 <h3 class="person">Camila Garcia</h3>
                 <p class="text">Marketing</p>
-            </div>
-            </li>
+                <ul class="social-list list">
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                           <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                       </a>
+                   </li>
+                   <li class="social-list-item">
+                       <a href="" class="social-list-link">
+                       <svg class="social-list-icon">
+                           <use href="./images/sprite.svg#icon-twitter"></use>
+                       </svg>
+                      </a>
+                  </li>
+                  <li class="social-list-item">
+                   <a href="" class="social-list-link">
+                  <svg class="social-list-icon">
+                   <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                  </a>
+              </li>
+              <li class="social-list-item">
+               <a href="" class="social-list-link">
+               <svg class="social-list-icon">
+                   <use href="./images/sprite.svg#icon-linkedin"></use>
+               </svg>
+              </a>
+          </li>
+                    </ul>
+                   </div>
+                   </li>
             <li class="team-item">
                 <img src="./images/team/daniel_wilson.jpg" alt="foto by Daniel Wilson"
                 width="264"
@@ -190,8 +243,38 @@
                 <div class="flex-team">
                 <h3 class="person">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
-            </div>
-            </li>
+                <ul class="social-list list">
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                           <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                       </a>
+                   </li>
+                   <li class="social-list-item">
+                       <a href="" class="social-list-link">
+                       <svg class="social-list-icon">
+                           <use href="./images/sprite.svg#icon-twitter"></use>
+                       </svg>
+                      </a>
+                  </li>
+                  <li class="social-list-item">
+                   <a href="" class="social-list-link">
+                  <svg class="social-list-icon">
+                   <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                  </a>
+              </li>
+              <li class="social-list-item">
+               <a href="" class="social-list-link">
+               <svg class="social-list-icon">
+                   <use href="./images/sprite.svg#icon-linkedin"></use>
+               </svg>
+              </a>
+          </li>
+                    </ul>
+                   </div>
+                   </li>
         </ul>
     </div>
     </section>
