--- a/index.html
+++ b/index.html
@@ -135,21 +135,21 @@
             </li>
             <li class="social-list-item">
                 <a href="" class="social-list-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="16" height="16">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
                </a>
            </li>
            <li class="social-list-item">
             <a href="" class="social-list-link">
-           <svg class="social-list-icon">
+           <svg class="social-list-icon" width="16" height="16">
             <use href="./images/sprite.svg#icon-facebook"></use>
            </svg>
            </a>
        </li>
        <li class="social-list-item">
         <a href="" class="social-list-link">
-        <svg class="social-list-icon">
+        <svg class="social-list-icon" width="16" height="16">
             <use href="./images/sprite.svg#icon-linkedin"></use>
         </svg>
        </a>
@@ -174,21 +174,21 @@
             </li>
             <li class="social-list-item">
                 <a href="" class="social-list-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="16" height="16">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
                </a>
            </li>
            <li class="social-list-item">
             <a href="" class="social-list-link">
-           <svg class="social-list-icon">
+           <svg class="social-list-icon" width="16" height="16">
             <use href="./images/sprite.svg#icon-facebook"></use>
            </svg>
            </a>
        </li>
        <li class="social-list-item">
         <a href="" class="social-list-link">
-        <svg class="social-list-icon">
+        <svg class="social-list-icon" width="16" height="16">
             <use href="./images/sprite.svg#icon-linkedin"></use>
         </svg>
        </a>
@@ -214,21 +214,21 @@
                    </li>
                    <li class="social-list-item">
                        <a href="" class="social-list-link">
-                       <svg class="social-list-icon">
+                       <svg class="social-list-icon" width="16" height="16">
                            <use href="./images/sprite.svg#icon-twitter"></use>
                        </svg>
                       </a>
                   </li>
                   <li class="social-list-item">
                    <a href="" class="social-list-link">
-                  <svg class="social-list-icon">
+                  <svg class="social-list-icon" width="16" height="16">
                    <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
                   </a>
               </li>
               <li class="social-list-item">
                <a href="" class="social-list-link">
-               <svg class="social-list-icon">
+               <svg class="social-list-icon" width="16" height="16">
                    <use href="./images/sprite.svg#icon-linkedin"></use>
                </svg>
               </a>
