--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
                 <a href="./index.html" class="logo logo-header"><span class="web top">Web</span><spam class="studio top">Studio</span></a>
                      <ul class="site-nav list" >
                         <li class="item" >
-                           <a href="./index.html" class="link">Studio</a>
+                           <a href="./index.html" class="link link-activ">Studio</a>
                         </li>
                         <li class="item">
-                            <a href="./portfolio.html" class="link">Portfolio</a>
+                            <a href="./portfolio.html" class="link link-activ">Portfolio</a>
                         </li>
                         <li class="item">
-                           <a href="" class="link">Contacts</a>
+                           <a href="" class="link link-activ">Contacts</a>
                        </li>
                      </ul>
             </nav>
                      <ul class="contakt-nav list">
                          <li>
-                             <a href="mailto:info@devstudio.com" class="contakt-phone">@devstudio.com
+                             <a href="mailto:info@devstudio.com" class="contakt-phone link-activ">@devstudio.com
                              </a>
                          <li>
-                     <a href="tel:+110001111111" class="contakt-mail">+11 (000) 111-11-11
+                     <a href="tel:+110001111111" class="contakt-mail link-activ">+11 (000) 111-11-11
                          </a>
                          </li>
                      </ul>
@@ -58,6 +58,11 @@
         <h2 class="section-title visual-hidden">Our features</h2>
             <ul class="features list">
             <li class="features-menu">
+                <div class="features-box-item">
+                    <svg class="features-icon">
+                        <use href="./images/sprite.svg#icon-antenna"></use>
+                    </svg>
+                </div>
                 <h3 class="features-title">Strategy
                 </h3>
                 <p class="text">Our goal is to identify the business
@@ -65,18 +70,33 @@
                 </p>
             </li>
             <li class="features-menu">
+                <div class="features-box-item">
+                    <svg class="features-icon">
+                        <use href="./images/sprite.svg#icon-clock"></use>
+                    </svg>
+                </div>
                 <h3 class="features-title">Punctuality
                 </h3>
                 <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.
                 </p>
             </li>
             <li class="features-menu">
+                <div class="features-box-item">
+                    <svg class="features-icon">
+                        <use href="./images/sprite.svg#icon-diagram"></use>
+                    </svg>
+                </div>
                 <h3 class="features-title">Diligence
                 </h3>
                 <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                 </p>
             </li>
             <li class="features-menu" >
+                <div class="features-box-item">
+                    <svg class="features-icon">
+                        <use href="./images/sprite.svg#icon-astronaut"></use>
+                    </svg>
+                </div>
                 <h3 class="features-title">Technologies
                 </h3>
                 <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -196,7 +216,6 @@
              </ul>
             </div>
             </li>
-
             <li class="team-item">
                 <img src="./images/team/camila_garcia.jpg" alt="foto by Camila Garcia"
                 width="264"
@@ -278,12 +297,98 @@
         </ul>
     </div>
     </section>
-   </main> 
-   <footer class="footer">
+    <!-- ----------------------Customer---------------------------------------- -->
+   <section class="customers">
     <div class="container">
+<h2 class="customers-title">Customers</h2>
+<ul class="customers-list list">
+    <li class="customers-menu">
+        <a href="" class="customers-link link">
+            <svg class="customers-icon" width="104" height="56">
+                <use href="./images/sprite.svg#icon-Logo" ></use>
+            </svg>
+        </a>
+    </li>
+    <li class="customers-menu">
+        <a href="" class="customers-link">
+            <svg class="customers-icon" width="104" height="56">
+                <use href="./images/sprite.svg#icon-Logo2" ></use>
+            </svg>
+        </a>
+    </li>
+    <li class="customers-menu">
+        <a href="" class="customers-link">
+            <svg class="customers-icon" width="104" height="56">
+                <use href="./images/sprite.svg#icon-Logo3" ></use>
+            </svg>
+        </a>
+    </li>
+    <li class="customers-menu">
+        <a href="" class="customers-link">
+            <svg class="customers-icon" width="104" height="56">
+                <use href="./images/sprite.svg#icon-Logo4" ></use>
+            </svg>
+        </a>
+    </li>
+    <li class="customers-menu">
+        <a href="" class="customers-link">
+            <svg class="customers-icon" width="104" height="56">
+                <use href="./images/sprite.svg#icon-Logo5" ></use>
+            </svg>
+        </a>
+    </li>
+    <li class="customers-menu">
+        <a href="" class="customers-link">
+            <svg class="customers-icon" width="104" height="56">
+                <use href="./images/sprite.svg#icon-Logo6" ></use>
+            </svg>
+        </a>
+    </li>
+</ul>
+    </div>
+   </section>
+</main> 
+<!-- ------------------------Footer-------------------------------------- -->
+   <footer class="footer">
+    <div class="container footer-container">
+        <div class="footer-content">
         <a href="./index.html" class="logo"> <span class="web down">Web</span><spam class="studio licht">Studio</span></a>
         <p class="footers text">Increase the flow of customers and sales for your business with digital marketing & growth solutions
         </p> 
+    </div>
+    <div class="footer-social">
+        <p class="footer-social-content">Social media</p>
+        <ul class="footer-social-menu list">
+            <li class="social-list-item">
+                <a href="" class="footer-social-link">
+                <svg class="social-list-icon" width="24" height="24">
+                   <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+               </a>
+           </li>
+           <li class="social-list-item">
+            <a href="" class="footer-social-link">
+            <svg class="social-list-icon" width="24" height="24">
+               <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+           </a>
+       </li>
+       <li class="social-list-item">
+        <a href="" class="footer-social-link">
+        <svg class="social-list-icon footer-icon" width="24" height="24">
+           <use href="./images/sprite.svg#icon-facebook"></use>
+        </svg>
+       </a>
+   </li>
+   <li class="social-list-item">
+    <a href="" class="footer-social-link">
+    <svg class="social-list-icon" width="24" height="24">
+       <use href="./images/sprite.svg#icon-linkedin"></use>
+    </svg>
+   </a>
+</li>
+        </ul>
+    </div>
     </div>
    </footer>
 </body>
