--- a/portfolio.html
+++ b/portfolio.html
@@ -19,22 +19,22 @@
                     <a href="./index.html" class="logo logo-header"><span class="web top">Web</span><spam class="studio top">Studio</span></a>
                          <ul class="site-nav list" >
                             <li class="item" >
-                               <a href="./index.html" class="link">Studio</a>
+                               <a href="./index.html" class="link link-activ">Studio</a>
                             </li>
                             <li class="item">
-                                <a href="./portfolio.html" class="link">Portfolio</a>
+                                <a href="./portfolio.html" class="link link-activ">Portfolio</a>
                             </li>
                             <li class="item">
-                               <a href="" class="link">Contacts</a>
+                               <a href="" class="link link-activ">Contacts</a>
                            </li>
                          </ul>
                 </nav>
                          <ul class="contakt-nav list">
                              <li>
-                                 <a href="mailto:info@devstudio.com" class="contakt-phone">@devstudio.com
+                                 <a href="mailto:info@devstudio.com" class="contakt-phone link-activ">@devstudio.com
                                  </a>
                              <li>
-                         <a href="tel:+110001111111" class="contakt-mail">+11 (000) 111-11-11
+                         <a href="tel:+110001111111" class="contakt-mail link-activ">+11 (000) 111-11-11
                              </a>
                              </li>
                          </ul>
@@ -168,10 +168,45 @@
     </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
+            <div class="footer-content">
             <a href="./index.html" class="logo"> <span class="web down">Web</span><spam class="studio licht">Studio</span></a>
             <p class="footers text">Increase the flow of customers and sales for your business with digital marketing & growth solutions
             </p> 
+        </div>
+        <div class="footer-social">
+            <p class="footer-social-content">Social media</p>
+            <ul class="footer-social-menu list">
+                <li class="social-list-item">
+                    <a href="" class="footer-social-link">
+                    <svg class="social-list-icon" width="24" height="24">
+                       <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                   </a>
+               </li>
+               <li class="social-list-item">
+                <a href="" class="footer-social-link">
+                <svg class="social-list-icon" width="24" height="24">
+                   <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+               </a>
+           </li>
+           <li class="social-list-item">
+            <a href="" class="footer-social-link">
+            <svg class="social-list-icon footer-icon" width="24" height="24">
+               <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+           </a>
+       </li>
+       <li class="social-list-item">
+        <a href="" class="footer-social-link">
+        <svg class="social-list-icon" width="24" height="24">
+           <use href="./images/sprite.svg#icon-linkedin"></use>
+        </svg>
+       </a>
+    </li>
+            </ul>
+        </div>
         </div>
        </footer>
 </body>
